feat: enhance user vm page
